--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
+    "@mui/icons-material": "^5.15.19",
     "ol": "^9.2.4",
     "preact": "^10.22.0",
     "sweetalert2": "^11.12.0",
